--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 								<li>
 									<a href="#">Projects</a>
 									<ul>
-										<li><a href="#">Lorem ipsum</a></li>
-										<li><a href="#">Magna veroeros</a></li>
+										<li><a href="#">Current</a></li>
+										<li><a href="#">Past</a></li>
 										<li><a href="#">Etiam nisl</a></li>
 										<li>
 											<a href="#">Sed consequat</a>
@@ -56,7 +56,7 @@
 
 			<!-- Intro -->
 				<section id="intro" class="wrapper style1">
-					<div class="title">The Introduction</div>
+					<div class="title">About Me</div>
 					<div class="container">
 						<p class="style1">So in case you were wondering what this is all about ...</p>
 						<p class="style2">
