About me update 1

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<!-- Logo -->
 						<div id="logo">
 							<h1><a href="index.html">Brandon Radzom</a></h1>
-							<p>Graduate Student at Indiana</p>
+							<p>Graduate Student at Indiana University</p>
 						</div>
 
 					<!-- Nav -->
@@ -47,8 +47,8 @@
 									</ul>
 								</li>
 								<li><a href="left-sidebar.html">Publications</a></li>
-								<li><a href="right-sidebar.html">CV</a></li>
-								<li><a href="no-sidebar.html">About Me</a></li>
+								<li><a href="right-sidebar.html">Experience</a></li>
+								<li><a href="no-sidebar.html">CV</a></li>
 							</ul>
 						</nav>
 
@@ -58,7 +58,11 @@
 				<section id="intro" class="wrapper style1">
 					<div class="title">About Me</div>
 					<div class="container">
-						<p class="style1">So in case you were wondering what this is all about ...</p>
+						<p class="style1">I am a 2nd year astronomy PhD student at Indiana University, and have obtained a minor in scientific computing.
+							I work with <a href="https://www.songhuwang.com/">Dr. Songhu Wang</a> on several computational projects relating to the
+							stability of exoplanetary systems. Particularly, I am interested in using N-body simulations to study fundamental limits of 
+						planetary growth in high-mass, high-multiplicity and highly compact systems, as well as the best statistics to characterize
+						gravitational instability multi-planet systems generally. </p>
 						<p class="style2">
 							Escape Velocity is a free responsive<br class="mobile-hide" />
 							site template by <a href="http://html5up.net" class="nobr">HTML5 UP</a>
