A little more on the Home page

--- a/index.html
+++ b/index.html
@@ -58,11 +58,16 @@
 				<section id="intro" class="wrapper style1">
 					<div class="title">About Me</div>
 					<div class="container">
-						<p class="style1">I am a 2nd year astronomy PhD student at Indiana University, and have obtained a minor in scientific computing.
+						<p class="style1">I am a 2nd year Astronomy PhD student at Indiana University, and have obtained a minor in Scientific Computing.
 							I work with <a href="https://www.songhuwang.com/">Dr. Songhu Wang</a> on several computational projects relating to the
 							stability of exoplanetary systems. Particularly, I am interested in using N-body simulations to study fundamental limits of 
 						planetary growth in high-mass, high-multiplicity and highly compact systems, as well as the best statistics to characterize
-						gravitational instability multi-planet systems generally. </p>
+						gravitational instability multi-planet systems generally. I earned a B.S. in Astronomy-Physics, a B.S. in Physics and a 
+							certificate in Computer Sciences from the University of Wisconsin - Madison in May of 2020. 
+							During my undergraduate career, I was heavily involved in astronomy and physics outreach as the Vice President
+						of the Astronomy Club. </p>
+						<p>When not studying, researching or doing public outreach, I am likely on my feet. I am an avid long distance
+						runner of 10 years and love a good hike. </p>
 						<p class="style2">
 							Escape Velocity is a free responsive<br class="mobile-hide" />
 							site template by <a href="http://html5up.net" class="nobr">HTML5 UP</a>
