Another homepage update

--- a/index.html
+++ b/index.html
@@ -66,8 +66,10 @@
 							certificate in Computer Sciences from the University of Wisconsin - Madison in May of 2020. 
 							During my undergraduate career, I was heavily involved in astronomy and physics outreach as the Vice President
 						of the Astronomy Club. </p>
-						<p>When not studying, researching or doing public outreach, I am likely on my feet. I am an avid long distance
-						runner of 10 years and love a good hike. </p>
+						<p class="style1">When not studying, researching or doing public outreach, I am likely on my feet. Firstly, I am an avid long distance
+						runner of 10 years. These days, I run anything from a 5ks to full marathons and even qualified for and ran the 2020 virtual
+							Boston marathon. I also love a good hike anywhere out in nature though lakes, rivers and mountains are a plus! Being from
+						Minnesota, I try to make the most of my winters by cross country skiing at local parks. </p>
 						<p class="style2">
 							Escape Velocity is a free responsive<br class="mobile-hide" />
 							site template by <a href="http://html5up.net" class="nobr">HTML5 UP</a>
