--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 							<h1><a href="index.html">Brandon Radzom</a></h1>
 							<p>Graduate Student at Indiana University</p>
 						</div>
-
+					<img src="images/kirkwood_pic_cropped.jpg" alt="Kirkwood headshot" width="104" height="142">
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
