--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 							<h1><a href="index.html">Brandon Radzom</a></h1>
 							<p>Graduate Student at Indiana University</p>
 						</div>
-					<img src="images/kirkwood_pic_cropped.jpg" alt="Kirkwood headshot" width="104" height="142">
+					
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
@@ -58,6 +58,7 @@
 				<section id="intro" class="wrapper style1">
 					<div class="title">About Me</div>
 					<div class="container">
+						<img src="images/kirkwood_pic_cropped.jpg" alt="Kirkwood headshot" width="104" height="142">
 						<p class="style1">I am a 2nd year Astronomy PhD student at Indiana University, and have obtained a minor in Scientific Computing.
 							I work with <a href="https://www.songhuwang.com/">Dr. Songhu Wang</a> on several computational projects relating to the
 							stability of exoplanetary systems. Particularly, I am interested in using N-body simulations to study fundamental limits of 
@@ -90,7 +91,7 @@
 
 						<!-- Image -->
 							<a href="#" class="image featured">
-								<img src="images/pic01.jpg" alt="" />
+								<img src="images/saturn_pic1.jpg" alt="" />
 							</a>
 
 						<!-- Features -->
