--- a/index.html
+++ b/index.html
@@ -72,10 +72,9 @@
 							Boston marathon. I also love a good hike anywhere out in nature though lakes, rivers and mountains are a plus! Being from
 						Minnesota, I try to make the most of my winters by cross country skiing at local parks. </p>
 						<p class="style2">
-							Escape Velocity is a free responsive<br class="mobile-hide" />
-							site template by <a href="http://html5up.net" class="nobr">HTML5 UP</a>
+							Yoooo Nikaan and Matt what's uppppp
 						</p>
-						<p class="style3">Yoooo Nikaan and Matt what's uppppp</p>
+						<p class="style3">Test text</p>
 						<ul class="actions">
 							<li><a href="#" class="button style3 large">Proceed</a></li>
 						</ul>
