--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 						<p class="style1">When not studying, researching or doing public outreach, I am likely on my feet. Firstly, I am an avid long distance
 						runner of 10 years. These days, I run anything from a 5ks to full marathons and even qualified for and ran the 2020 virtual
 							Boston marathon. I also love a good hike anywhere out in nature though lakes, rivers and mountains are a plus! Being from
-						Minnesota, I try to make the most of my winters by cross country skiing at local parks. </p>
+						Minnesota, I try to make the most of my winters by cross country skiing. </p>
 						<p class="style2">
 							Yoooo Nikaan and Matt what's uppppp
 						</p>
@@ -88,7 +88,7 @@
 
 						<!-- Image -->
 							<a href="#" class="image featured">
-								<img src="images/saturn_pic1.jpg" alt="" />
+								<img src="images/saturn_pic1.png" alt="" />
 							</a>
 
 						<!-- Features -->
