--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<h1><a href="index.html">Brandon Radzom</a></h1>
+							<h1><a href="index.html">Brandon Radzom and physics buddies <3</a></h1>
 							<p>Graduate Student at Indiana University</p>
 						</div>
 					
