--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Brandon Radzom and his best physics buddies</title>
+		<title>Brandon Radzom</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +19,7 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<h1><a href="index.html">Brandon Radzom and physics buddies <3</a></h1>
+							<h1><a href="index.html">Brandon Radzom<3</a></h1>
 							<p>Graduate Student at Indiana University</p>
 						</div>
 					
@@ -72,7 +72,7 @@
 							Boston marathon. I also love a good hike anywhere out in nature though lakes, rivers and mountains are a plus! Being from
 						Minnesota, I try to make the most of my winters by cross country skiing. </p>
 						<p class="style2">
-							Yoooo Nikaan and Matt what's uppppp
+							Big text
 						</p>
 						<p class="style3">Test text</p>
 						<ul class="actions">
