--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
 						<!-- Image -->
 							<a href="#" class="image featured">
-								<img src="images/saturn_pic1.png" alt="" />
+								<img src="images/jupiter-wallpaper.jpg" alt="Jupiter horizon" />
 							</a>
 
 						<!-- Features -->
