--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<h1><a href="index.html">Brandon Radzom<3</a></h1>
+							<h1><a href="index.html">Brandon Radzom</a></h1>
 							<p>Graduate Student at Indiana University</p>
 						</div>
 					
@@ -75,9 +75,10 @@
 							Big text
 						</p>
 						<p class="style3">Test text</p>
+						<!--
 						<ul class="actions">
 							<li><a href="#" class="button style3 large">Proceed</a></li>
-						</ul>
+						</ul> -->
 					</div>
 				</section>
 
