--- a/index.html
+++ b/index.html
@@ -58,18 +58,19 @@
 				<section id="intro" class="wrapper style1">
 					<div class="title">About Me</div>
 					<div class="container">
-						<img src="images/kirkwood_pic_cropped.jpg" alt="Kirkwood headshot" width="104" height="142">
-						<p class="style1">I am a 2nd year Astronomy PhD student at Indiana University, and have obtained a minor in Scientific Computing.
-							I work with <a href="https://www.songhuwang.com/">Dr. Songhu Wang</a> on several computational projects relating to the
-							stability of exoplanetary systems. Particularly, I am interested in using N-body simulations to study fundamental limits of 
-						planetary growth in high-mass, high-multiplicity and highly compact systems, as well as the best statistics to characterize
-						gravitational instability multi-planet systems generally. I earned a B.S. in Astronomy-Physics, a B.S. in Physics and a 
+						<img src="images/profheadshoft_2021_square.jpg" alt="Prof headshot" width="142" height="142">
+						<p class="style1">I am a 3rd year Astronomy PhD candidate at Indiana University (IU), and have obtained a minor in Scientific Computing.
+							I work with <a href="https://www.songhuwang.com/">Dr. Songhu Wang</a> on several projects related to short-period gas giant
+							formation. Particularly, I am interested in using N-body simulations to study dynamical origins of hot and warm Jupiters
+							in multi-planet systems. Additionally, I am heavily involved in outreach efforts at IU, serving as the Undergraduate
+							Research Coordinator for the Astronomy Department, writing for ScIU (IU's graduate science blog), and regularly volunteering at local events.
+							I earned a B.S. in Astronomy-Physics, a B.S. in Physics and a 
 							certificate in Computer Sciences from the University of Wisconsin - Madison in May of 2020. 
-							During my undergraduate career, I was heavily involved in astronomy and physics outreach as the Vice President
+							During my undergraduate career, I also participated in astronomy and physics outreach often as the Volunteer Coordinator and Vice President
 						of the Astronomy Club. </p>
-						<p class="style1">When not studying, researching or doing public outreach, I am likely on my feet. Firstly, I am an avid long distance
-						runner of 10 years. These days, I run anything from a 5ks to full marathons and even qualified for and ran the 2020 virtual
-							Boston marathon. I also love a good hike anywhere out in nature though lakes, rivers and mountains are a plus! Being from
+						<p class="style1">When not doing science, I am likely on my feet. Firstly, I am an avid long distance
+						runner of 10 years. These days, I run anything from a 5ks to full marathons, but my current focus is to make it out to the Boston marathon in 2024.
+						I also love a good hike anywhere out in nature; anything with lakes, rivers and mountains are a plus! Originating from
 						Minnesota, I try to make the most of my winters by cross country skiing. </p>
 						<p class="style2">
 							Big text
