--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 					<!-- Logo -->
 						<div id="logo">
 							<h1><a href="index.html">Brandon Radzom</a></h1>
-							<p>Graduate Student at Indiana University</p>
+							<p>PhD Candidate at Indiana University</p>
+							<img src="images/profheadshot_2021_square.jpg" alt="Prof headshot" width="180" height="180">
 						</div>
 					
 					<!-- Nav -->
@@ -28,7 +29,7 @@
 							<ul>
 								<li class="current"><a href="index.html">Home</a></li>
 								<li>
-									<a href="#">Projects</a>
+									<a href="#">Research</a>
 									<ul>
 										<li><a href="#">Current</a></li>
 										<li><a href="#">Past</a></li>
@@ -58,13 +59,14 @@
 				<section id="intro" class="wrapper style1">
 					<div class="title">About Me</div>
 					<div class="container">
-						<img src="images/profheadshot_2021_square.jpg" alt="Prof headshot" width="142" height="142">
-						<p class="style1">I am a 3rd year Astronomy PhD candidate at Indiana University (IU), and have obtained a minor in Scientific Computing.
+						
+						<p class="style1">I am a 3rd year Astronomy PhD candidate at Indiana University (IU) with a minor in Scientific Computing.
 							I work with <a href="https://www.songhuwang.com/">Dr. Songhu Wang</a> on several projects related to short-period gas giant
 							formation. Particularly, I am interested in using N-body simulations to study dynamical origins of hot and warm Jupiters
 							in multi-planet systems. Additionally, I am heavily involved in outreach efforts at IU, serving as the Undergraduate
-							Research Coordinator for the Astronomy Department, writing for ScIU (IU's graduate science blog), and regularly volunteering at local events.
-							I earned a B.S. in Astronomy-Physics, a B.S. in Physics and a 
+							Research Coordinator for the Astronomy Department, writing for ScIU (IU's graduate science blog), and regularly volunteering
+							at local events. </p>
+							<p class="style1">I earned a B.S. in Astronomy-Physics, a B.S. in Physics and a 
 							certificate in Computer Sciences from the University of Wisconsin - Madison in May of 2020. 
 							During my undergraduate career, I also participated in astronomy and physics outreach often as the Volunteer Coordinator and Vice President
 						of the Astronomy Club. </p>
@@ -85,7 +87,7 @@
 
 			<!-- Main -->
 				<section id="main" class="wrapper style2">
-					<div class="title">The Details</div>
+					<div class="title">Research at a glance</div>
 					<div class="container">
 
 						<!-- Image -->
