commented out "main" section

--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
 						runner of 10 years. These days, I run anything from a 5ks to full marathons, but my current focus is to make it out to the Boston marathon in 2024.
 						I also love a good hike anywhere out in nature; anything with lakes, rivers and mountains are a plus! Originating from
 						Minnesota, I try to make the most of my winters by cross country skiing. </p>
-						<p class="style2">
+						<!--<p class="style2">
 							Big text
 						</p>
-						<p class="style3">Test text</p>
+						<p class="style3">Test text</p>-->
 						<!--
 						<ul class="actions">
 							<li><a href="#" class="button style3 large">Proceed</a></li>
@@ -86,7 +86,7 @@
 				</section>
 
 			<!-- Main -->
-				<section id="main" class="wrapper style2">
+				<!--<section id="main" class="wrapper style2">
 					<div class="title">Research at a glance</div>
 					<div class="container">
 
@@ -148,7 +148,7 @@
 							</section>
 
 					</div>
-				</section>
+				</section>-->
 
 			<!-- Highlights -->
 				<section id="highlights" class="wrapper style3">
