--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 						<div id="logo">
 							<h1><a href="index.html">Brandon Radzom</a></h1>
 							<p>PhD Candidate at Indiana University</p>
-							<img src="images/profheadshot_2021_square.jpg" alt="Prof headshot" width="180" height="180">
+							<img src="images/profheadshot_2021_square.jpg" alt="Prof headshot" width="280" height="280">
 						</div>
 					
 					<!-- Nav -->
@@ -86,73 +86,73 @@
 				</section>
 
 			<!-- Main -->
-				<!--<section id="main" class="wrapper style2">
-					<div class="title">Research at a glance</div>
-					<div class="container">
+				<!--<section id="main" class="wrapper style2">-->
+					<!--<div class="title">Research at a glance</div>-->
+					<!--<div class="container">-->
 
 						<!-- Image -->
-							<a href="#" class="image featured">
+							<!--<a href="#" class="image featured">
 								<img src="images/jupiter-wallpaper.jpg" alt="Jupiter horizon" />
-							</a>
+							</a>-->
 
 						<!-- Features -->
-							<section id="features">
-								<header class="style1">
-									<h2>Dolor consequat feugiat amet veroeros</h2>
-									<p>Feugiat dolor nullam orci pretium phasellus justo</p>
-								</header>
-								<div class="feature-list">
-									<div class="row">
-										<div class="col-6 col-12-medium">
-											<section>
-												<h3 class="icon fa-comment">Mattis velit diam vulputate</h3>
-												<p>Eget mattis at, laoreet vel et velit aliquam diam ante, aliquet sit amet vulputate et magna feugiat laoreet vel velit lorem.</p>
-											</section>
-										</div>
-										<div class="col-6 col-12-medium">
-											<section>
-												<h3 class="icon solid fa-sync">Lorem ipsum dolor sit veroeros</h3>
-												<p>Eget mattis at, laoreet vel et velit aliquam diam ante, aliquet sit amet vulputate et magna feugiat laoreet vel velit lorem.</p>
-											</section>
-										</div>
-										<div class="col-6 col-12-medium">
-											<section>
-												<h3 class="icon fa-image">Pretium phasellus justo lorem</h3>
-												<p>Eget mattis at, laoreet vel et velit aliquam diam ante, aliquet sit amet vulputate et magna feugiat laoreet vel velit lorem.</p>
-											</section>
-										</div>
-										<div class="col-6 col-12-medium">
-											<section>
-												<h3 class="icon solid fa-cog">Tempus sed pretium orci</h3>
-												<p>Eget mattis at, laoreet vel et velit aliquam diam ante, aliquet sit amet vulputate et magna feugiat laoreet vel velit lorem.</p>
-											</section>
-										</div>
-										<div class="col-6 col-12-medium">
-											<section>
-												<h3 class="icon solid fa-wrench">Aliquam consequat et feugiat</h3>
-												<p>Eget mattis at, laoreet vel et velit aliquam diam ante, aliquet sit amet vulputate et magna feugiat laoreet vel velit lorem.</p>
-											</section>
-										</div>
-										<div class="col-6 col-12-medium">
-											<section>
-												<h3 class="icon solid fa-check">Dolore laoreet aliquam mattis</h3>
-												<p>Eget mattis at, laoreet vel et velit aliquam diam ante, aliquet sit amet vulputate et magna feugiat laoreet vel velit lorem.</p>
-											</section>
-										</div>
-									</div>
-								</div>
-								<ul class="actions special">
-									<li><a href="#" class="button style1 large">Get Started</a></li>
-									<li><a href="#" class="button style2 large">More Info</a></li>
-								</ul>
-							</section>
+							<!--<section id="features">-->
+								<!--<header class="style1">-->
+									<!--<h2>Dolor consequat feugiat amet veroeros</h2>-->
+									<!--<p>Feugiat dolor nullam orci pretium phasellus justo</p>-->
+								<!--</header>-->
+								<!--<div class="feature-list">-->
+									<!--<div class="row">-->
+										<!--<div class="col-6 col-12-medium">-->
+											<!--<section>-->
+												<!--<h3 class="icon fa-comment">Mattis velit diam vulputate</h3>-->
+												<!--<p>Eget mattis at, laoreet vel et velit aliquam diam ante, aliquet sit amet vulputate et magna feugiat laoreet vel velit lorem.</p>-->
+											<!--</section>-->
+										<!--</div>-->
+										<!--<div class="col-6 col-12-medium">-->
+											<!--<section>-->
+												<!--<h3 class="icon solid fa-sync">Lorem ipsum dolor sit veroeros</h3>-->
+												<!--<p>Eget mattis at, laoreet vel et velit aliquam diam ante, aliquet sit amet vulputate et magna feugiat laoreet vel velit lorem.</p>-->
+											<!--</section>-->
+										<!--</div>-->
+										<!--<div class="col-6 col-12-medium">-->
+											<!--<section>-->
+												<!--<h3 class="icon fa-image">Pretium phasellus justo lorem</h3>-->
+												<!--<p>Eget mattis at, laoreet vel et velit aliquam diam ante, aliquet sit amet vulputate et magna feugiat laoreet vel velit lorem.</p>-->
+											<!--</section>-->
+										<!--</div>-->
+										<!--<div class="col-6 col-12-medium">-->
+											<!--<section>-->
+												<!--<h3 class="icon solid fa-cog">Tempus sed pretium orci</h3>-->
+												<!--<p>Eget mattis at, laoreet vel et velit aliquam diam ante, aliquet sit amet vulputate et magna feugiat laoreet vel velit lorem.</p>-->
+											<!--</section>-->
+										<!--</div>-->
+										<!--<div class="col-6 col-12-medium">-->
+											<!--<section>-->
+												<!--<h3 class="icon solid fa-wrench">Aliquam consequat et feugiat</h3>-->
+												<!--<p>Eget mattis at, laoreet vel et velit aliquam diam ante, aliquet sit amet vulputate et magna feugiat laoreet vel velit lorem.</p>-->
+											<!--</section>-->
+										<!--</div>-->
+										<!--<div class="col-6 col-12-medium">-->
+											<!--<section>-->
+												<!--<h3 class="icon solid fa-check">Dolore laoreet aliquam mattis</h3>-->
+												<!--<p>Eget mattis at, laoreet vel et velit aliquam diam ante, aliquet sit amet vulputate et magna feugiat laoreet vel velit lorem.</p>-->
+											<!--</section>-->
+										<!--</div>-->
+									<!--</div>-->
+								<!--</div>-->
+								<!--<ul class="actions special">-->
+									<!--<li><a href="#" class="button style1 large">Get Started</a></li>-->
+									<!--<li><a href="#" class="button style2 large">More Info</a></li>-->
+								<!--</ul>-->
+							<!--</section>-->
 
-					</div>
-				</section>-->
+					<!--</div>-->
+				<!--</section>-->
 
 			<!-- Highlights -->
 				<section id="highlights" class="wrapper style3">
-					<div class="title">The Endorsements</div>
+					<div class="title">Research Areas</div>
 					<div class="container">
 						<div class="row aln-center">
 							<div class="col-4 col-12-medium">
