--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 							certificate in Computer Sciences from the University of Wisconsin - Madison in May of 2020. 
 							During my undergraduate career, I also participated in astronomy and physics outreach often as the Volunteer Coordinator and Vice President
 						of the Astronomy Club. </p>
-						<p class="style1">When not doing science, I am likely on my feet. Firstly, I am an avid long distance
+						<p class="style1">When not doing science, I am likely on my feet. First and foremost, I am an avid long distance
 						runner of 10 years. These days, I run anything from a 5ks to full marathons, but my current focus is to make it out to the Boston marathon in 2024.
 						I also love a good hike anywhere out in nature; anything with lakes, rivers and mountains are a plus! Originating from
 						Minnesota, I try to make the most of my winters by cross country skiing. </p>
