--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 												<section>
 													<h3 class="icon solid fa-home">Mailing Address</h3>
 													<p>
-														IU Astronomy Deptartment<br />
+														IU Astronomy Department<br />
 														727 East 3rd Street<br />
 														Bloomington, IN 47405
 													</p>
