--- a/index.html
+++ b/index.html
@@ -28,28 +28,29 @@
 						<nav id="nav">
 							<ul>
 								<li class="current"><a href="index.html">Home</a></li>
-								<li>
-									<a href="#">Research</a>
-									<ul>
-										<li><a href="#">Current</a></li>
-										<li><a href="#">Past</a></li>
-										<li><a href="#">Etiam nisl</a></li>
-										<li>
-											<a href="#">Sed consequat</a>
-											<ul>
-												<li><a href="#">Lorem dolor</a></li>
-												<li><a href="#">Amet consequat</a></li>
-												<li><a href="#">Magna phasellus</a></li>
-												<li><a href="#">Etiam nisl</a></li>
-												<li><a href="#">Sed feugiat</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Nisl tempus</a></li>
-									</ul>
-								</li>
-								<li><a href="left-sidebar.html">Publications</a></li>
-								<li><a href="right-sidebar.html">Experience</a></li>
-								<li><a href="no-sidebar.html">CV</a></li>
+								<!--<li>-->
+									<!--<a href="#">Research</a>-->
+									<!--<ul>-->
+										<!--<li><a href="#">Current</a></li>-->
+										<!--<li><a href="#">Past</a></li>-->
+										<!--<li><a href="#">Etiam nisl</a></li>-->
+										<!--<li>-->
+											<!--<a href="#">Sed consequat</a>-->
+											<!--<ul>-->
+												<!--<li><a href="#">Lorem dolor</a></li>-->
+												<!--<li><a href="#">Amet consequat</a></li>-->
+												<!--<li><a href="#">Magna phasellus</a></li>-->
+												<!--<li><a href="#">Etiam nisl</a></li>-->
+												<!--<li><a href="#">Sed feugiat</a></li>-->
+											<!--</ul>-->
+										<!--</li>-->
+										<!--<li><a href="#">Nisl tempus</a></li>-->
+									<!--</ul>-->
+								<!--</li>-->
+								<li><a href="research.html">Research</a></li>
+								<li><a href="publications.html">Publications</a></li>
+								<li><a href="experience.html">Experience</a></li>
+								<li><a href="cv.html">CV</a></li>
 							</ul>
 						</nav>
 
