--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
 						
 						<p class="style1">I am a 3rd year Astronomy PhD candidate at Indiana University (IU) with a minor in Scientific Computing.
 							I work with <a href="https://orcid.org/0000-0002-7846-6981/">Dr. Songhu Wang</a> on several projects related to short-period gas giant
-							formation. Particularly, I am interested in using N-body simulations to study dynamical origins of hot and warm Jupiters
+							formation. Particularly, I am interested in using N-body simulations to dynamically study the origins of hot and warm Jupiters
 							in multi-planet systems. Additionally, I am heavily involved in outreach efforts at IU, serving as the Undergraduate
 							Research Coordinator for the Astronomy Department, writing for ScIU (IU's graduate science blog), and regularly volunteering
 							at local events. </p>
 							<p class="style1">I earned a B.S. in Astronomy-Physics, a B.S. in Physics and a 
 							certificate in Computer Sciences from the University of Wisconsin - Madison in May of 2020. 
-							During my undergraduate career, I also participated in astronomy and physics outreach often as the Volunteer Coordinator and Vice President
+							During my undergraduate career, I also participated in astronomy and physics outreach as the Volunteer Coordinator and Vice President
 						of the Astronomy Club. </p>
 						<p class="style1">When not doing science, I am likely on my feet. First and foremost, I am an avid long distance
 						runner of 10 years. These days, I run anything from a 5ks to full marathons, but my current focus is to make it out to the Boston marathon in 2024.
