--- a/research.html
+++ b/research.html
@@ -19,8 +19,7 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<h1><a href="index.html">Research</a></h1>
-							<p>A free responsive site template by HTML5 UP</p>
+							<h1><a href="research.html">Research</a></h1>
 						</div>
 
 					<!-- Nav -->
@@ -30,7 +29,7 @@
 								<li class="current"><a href="research.html">Research</a></li>
 								<li><a href="publications.html">Publications</a></li>
 								<li><a href="experience.html">Experience</a></li>
-								<li><a href="cv.html">Cirriculum Vitae</a></li>
+								<li><a href="cv.html">CV</a></li>
 								
 							</ul>
 						</nav>
@@ -39,7 +38,7 @@
 
 			<!-- Main -->
 				<div id="main" class="wrapper style2">
-					<div class="title">No Sidebar</div>
+					<div class="title">Exoplanets</div>
 					<div class="container">
 
 						<!-- Content -->
@@ -90,7 +89,7 @@
 
 			<!-- Highlights -->
 				<section id="highlights" class="wrapper style3">
-					<div class="title">The Endorsements</div>
+					<div class="title">Galaxy Evolution & AGN</div>
 					<div class="container">
 						<div class="row aln-center">
 							<div class="col-4 col-12-medium">
