--- a/publications.html
+++ b/publications.html
@@ -30,7 +30,7 @@
 								<li><a href="research.html">Research</a></li>
 								<li class="current"><a href="publications.html">Publications</a></li>
 								<li><a href="experience.html">Experience</a></li>
-								<li><a href="cv.html">Curriculum Vitae</a></li>
+								<li><a href="cv.html">CV</a></li>
 							</ul>
 						</nav>
 
