--- a/cv.html
+++ b/cv.html
@@ -20,7 +20,10 @@
 					<!-- Logo -->
 						<div id="logo">
 							<h1><a href="index.html">Curriculum Vitae</a></h1>
-							<p>Click the link below to download</p>
+							<p>Click<a href="/images/Radzom_CV.pdf" here>
+  								<img src="/images/Radzom_CV.pdf" alt="Brandon Radzom's CV">
+							</a> to download</p>
+							
 						</div>
 
 					<!-- Nav -->
