--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 						<p class="style1">When not doing science, I am likely on my feet. First and foremost, I am an avid long distance
 						runner of 10 years. These days, I run anything from a 5ks to full marathons, but my current focus is to make it out to the Boston marathon in 2024.
 						I also love hiking anywhere out in nature; anything with lakes, rivers, and mountains are a plus! Originating from
-						Minnesota, I try to make the most of my winters by cross country skiing. </p>
+						Minnesota, I try to make the most of my winters by cross-country skiing. </p>
 						<!--<p class="style2">
 							Big text
 						</p>
