--- a/cv.html
+++ b/cv.html
@@ -20,8 +20,8 @@
 					<!-- Logo -->
 						<div id="logo">
 							<h1><a href="index.html">Curriculum Vitae</a></h1>
-							<p>Click<a href="/images/Radzom_CV.pdf" here>
-  								<img src="/images/Radzom_CV.pdf" alt="Brandon Radzom's CV">
+							<p>Click<a href="/Radzom_CV.pdf" here>
+  								<img src="/Radzom_CV.pdf" alt="here">
 							</a> to download</p>
 							
 						</div>
