--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 					<div class="title">About Me</div>
 					<div class="container">
 						
-						<p class="style1">I am a 3rd year Astronomy PhD candidate at Indiana University (IU) with a minor in Scientific Computing.
+						<p class="style1">I am a 3rd year Astronomy PhD candidate at Indiana University - Bloomington (IU) with a minor in Scientific Computing.
 							I work with <a href="https://orcid.org/0000-0002-7846-6981/">Dr. Songhu Wang</a> on several projects related to short-period gas giant
 							formation. Particularly, I am interested in using N-body simulations to dynamically study the origins of hot and warm Jupiters
 							in multi-planet systems. Additionally, I am heavily involved in outreach efforts at IU, serving as the Undergraduate
