--- a/cv.html
+++ b/cv.html
@@ -40,6 +40,7 @@
 				</section>
 
 			<!-- Main -->
+			<embed src="/Radzom_CV.pdf" width="800px" height="2100px" />
 				<div id="main" class="wrapper style2">
 					<div class="title">Brandon Radzom's CV</div>
 					<div class="container">
