--- a/research.html
+++ b/research.html
@@ -45,9 +45,8 @@
 							<div id="content">
 								<article class="box post">
 									<header class="style1">
-										<h2>Lorem ipsum dolor sit amet magna egestas<br class="mobile-hide" />
-										morbi bibendum sed malesuada</h2>
-										<p>Tempus feugiat veroeros sed nullam dolore</p>
+										<h2>In Situ Origins of Hot Jupiter Isolation</h2>
+										<p>On the Evolution of Giant Planets in Multi-planet Systems</p>
 									</header>
 									<a href="#" class="image featured">
 										<img src="images/pic01.jpg" alt="" />
