--- a/research.html
+++ b/research.html
@@ -63,7 +63,7 @@
 									magna volutpat malesuada quis eget eros. Nullam sodales cursus sapien, id consequat
 									leo suscipit ut. Praesent id turpis vitae turpis pretium ultricies. Vestibulum sit
 									amet risus elit.</p>
-									a href="#" class="image featured">
+									<a href="#" class="image featured">
 										<img src="images/PRfgiant_Pfgiant_color_final.jpg" ALIGN="left" HSPACE="50" VSPACE="50" alt="test" />
 									</a>
 									<p>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra
@@ -190,7 +190,7 @@
 										<p>2018-2020</p>
 									</header>
 									<a href="#" class="image featured">
-										<img src="images/PRfgiant_Pfgiant_K11_color_final.svg" ALIGN="left" HSPACE="50" VSPACE="50" alt="test" />
+										<img src="images/PRfgiant_Pfgiant_K11_color_final.jpg" ALIGN="left" HSPACE="50" VSPACE="50" alt="test" />
 									</a>
 									<p>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget.
 									odio eleifend. Duis commodo fringilla commodo. Aliquam erat volutpat. Vestibulum
