--- a/research.html
+++ b/research.html
@@ -49,8 +49,12 @@
 										<p>2021-Present</p>
 									</header>
 									<a href="#" class="image featured">
-										<img src="images/HJ_irradiated.jpg" ALIGN="left" HSPACE="50" VSPACE="50" alt="test" />
+										<img src=/>
 									</a>
+									<!-- ALIGN="left" -->
+									<div>
+									      <img src="images/HJ_irradiated.jpg" HSPACE="50" VSPACE="50" alt="test" >
+									</div>
 									<p>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget.
 									odio eleifend. Duis commodo fringilla commodo. Aliquam erat volutpat. Vestibulum
 									facilisis leo magna. Cras sit amet urna eros, id egestas urna. Quisque aliquam
@@ -63,9 +67,9 @@
 									magna volutpat malesuada quis eget eros. Nullam sodales cursus sapien, id consequat
 									leo suscipit ut. Praesent id turpis vitae turpis pretium ultricies. Vestibulum sit
 									amet risus elit.</p>
-									<a href="#" class="image featured">
-										<img src="images/PRfgiant_Pfgiant_color_final.jpg" ALIGN="left" HSPACE="50" VSPACE="50" alt="test" />
-									</a>
+									<div>
+										<img src="images/PRfgiant_Pfgiant_color_final.jpg" HSPACE="50" VSPACE="50" alt="test2"/>
+									</div>
 									<p>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra
 									ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel. Praesent nec orci
 									eget quam rutrum bibendum. Proin pellentesque diam non ligula commodo tempor. Vivamus
