--- a/research.html
+++ b/research.html
@@ -53,7 +53,7 @@
 									</a>
 									<!-- ALIGN="left" -->
 									<div>
-									      <img src="images/HJ_irradiated.jpg" HSPACE="50" VSPACE="50" alt="test" >
+									      <img src="images/HJ_irradiated.jpg" HSPACE="50" VSPACE="50" width="407" height="302" alt="test" >
 									</div>
 									<p>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget.
 									odio eleifend. Duis commodo fringilla commodo. Aliquam erat volutpat. Vestibulum
@@ -68,7 +68,7 @@
 									leo suscipit ut. Praesent id turpis vitae turpis pretium ultricies. Vestibulum sit
 									amet risus elit.</p>
 									<div>
-										<img src="images/PRfgiant_Pfgiant_color_final.jpg" HSPACE="50" VSPACE="50" alt="test2"/>
+										<img src="images/PRfgiant_Pfgiant_color_final.jpg" HSPACE="50" VSPACE="50" width="400" height="300" alt="test2"/>
 									</div>
 									<p>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra
 									ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel. Praesent nec orci
@@ -194,7 +194,7 @@
 										<p>2018-2020</p>
 									</header>
 									<a href="#" class="image featured">
-										<img src="images/PRfgiant_Pfgiant_K11_color_final.jpg" ALIGN="left" HSPACE="50" VSPACE="50" alt="test" />
+										<img src="images/PRfgiant_Pfgiant_K11_color_final.jpg" ALIGN="left" HSPACE="50" VSPACE="50" width="400" height="300" alt="test" />
 									</a>
 									<p>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget.
 									odio eleifend. Duis commodo fringilla commodo. Aliquam erat volutpat. Vestibulum
