--- a/research.html
+++ b/research.html
@@ -50,7 +50,7 @@
 									</header>
 									<!-- ALIGN="left" -->
 									<div>
-									      <img src="images/HJ_irradiated.jpg" width="407" height="302" alt="test" />
+										<img src="images/HJ_irradiated.jpg" width="407" height="302" align="left" alt="test" />
 									</div>
 									<p>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget.
 									odio eleifend. Duis commodo fringilla commodo. Aliquam erat volutpat. Vestibulum
@@ -65,7 +65,7 @@
 									leo suscipit ut. Praesent id turpis vitae turpis pretium ultricies. Vestibulum sit
 									amet risus elit.</p>
 									<div>
-										<img src="images/PRfgiant_Pfgiant_color_final.jpg" HSPACE="50" VSPACE="50" width="400" height="300" alt="test2" />
+										<img src="images/PRfgiant_Pfgiant_K11_color_final.jpg" width="400" height="300" alt="test2" />
 									</div>
 									<p>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra
 									ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel. Praesent nec orci
