--- a/research.html
+++ b/research.html
@@ -50,8 +50,12 @@
 									</header>
 									<!-- ALIGN="left" -->
 									<div>
-										<img src="images/HJ_irradiated.jpg" width="407" height="302" align="left" alt="test" />
+										<img src="images/HJ_irradiated.jpg" width="407" height="302" align="left" alt="NASA/Ames/JPL-Caltech" />
 									</div>
+									<figure>
+									    <img src="images/HJ_irradiated.jpg" width="407" height="302" align="left" alt="NASA/Ames/JPL-Caltech" />
+									    <figcaption>Image Credit: NASA/Ames/JPL-Caltech</figcaption>
+									</figure>
 									<p>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget.
 									odio eleifend. Duis commodo fringilla commodo. Aliquam erat volutpat. Vestibulum
 									facilisis leo magna. Cras sit amet urna eros, id egestas urna. Quisque aliquam
@@ -65,7 +69,7 @@
 									leo suscipit ut. Praesent id turpis vitae turpis pretium ultricies. Vestibulum sit
 									amet risus elit.</p>
 									<div>
-										<img src="images/PRfgiant_Pfgiant_K11_color_final.jpg" width="400" height="300" alt="test2" />
+										<img src="images/PRfgiant_Pfgiant_K11_color_final.jpg" width="400" height="300" align="right" alt="test2" />
 									</div>
 									<p>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra
 									ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel. Praesent nec orci
