--- a/research.html
+++ b/research.html
@@ -48,10 +48,6 @@
 										<h2>In Situ Origins of Hot Jupiters</h2>
 										<p>2021-Present</p>
 									</header>
-									<!-- ALIGN="left" -->
-									<div>
-										<img src="images/HJ_irradiated.jpg" width="407" height="302" align="left" alt="NASA/Ames/JPL-Caltech" />
-									</div>
 									<figure>
 									    <img src="images/HJ_irradiated.jpg" width="407" height="302" align="left" alt="NASA/Ames/JPL-Caltech" />
 									    <figcaption>Image Credit: NASA/Ames/JPL-Caltech</figcaption>
@@ -68,9 +64,10 @@
 									magna volutpat malesuada quis eget eros. Nullam sodales cursus sapien, id consequat
 									leo suscipit ut. Praesent id turpis vitae turpis pretium ultricies. Vestibulum sit
 									amet risus elit.</p>
-									<div>
-										<img src="images/PRfgiant_Pfgiant_K11_color_final.jpg" width="400" height="300" align="right" alt="test2" />
-									</div>
+									<figure>
+									    <img src="images/PRfgiant_Pfgiant_K11_color_final.jpg" width="400" height="300" align="right" alt="test2" />
+									    <figcaption>Period ratio of giants with respect to their nearest companion.</figcaption>
+									</figure>
 									<p>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra
 									ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel. Praesent nec orci
 									eget quam rutrum bibendum. Proin pellentesque diam non ligula commodo tempor. Vivamus
