--- a/research.html
+++ b/research.html
@@ -48,10 +48,10 @@
 										<h2>In Situ Origins of Hot Jupiters</h2>
 										<p>2021-Present</p>
 									</header>
-									<figure>
+									<div>
 									    <img src="images/HJ_irradiated.jpg" width="407" height="302" align="left" alt="NASA/Ames/JPL-Caltech" />
-									    <figcaption>Image Credit: NASA/Ames/JPL-Caltech</figcaption>
-									</figure>
+									    <p>Image Credit: NASA/Ames/JPL-Caltech</p>
+									</div>
 									<p>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget.
 									odio eleifend. Duis commodo fringilla commodo. Aliquam erat volutpat. Vestibulum
 									facilisis leo magna. Cras sit amet urna eros, id egestas urna. Quisque aliquam
