hspace and vspace

--- a/research.html
+++ b/research.html
@@ -49,21 +49,43 @@
 										<p>2021-Present</p>
 									</header>
 									<div>
-									    <img src="images/HJ_irradiated.jpg" width="407" height="302" align="left" alt="NASA/Ames/JPL-Caltech" />
+									    <img src="images/HJ_irradiated.jpg" width="407" height="302" align="left" hspace="50" vspace="50" alt="NASA/Ames/JPL-Caltech" />
 									    <p>Image Credit: NASA/Ames/JPL-Caltech</p>
 									</div>
-									<p>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget.
-									odio eleifend. Duis commodo fringilla commodo. Aliquam erat volutpat. Vestibulum
-									facilisis leo magna. Cras sit amet urna eros, id egestas urna. Quisque aliquam
-									tempus euismod. Vestibulum ante ipsum primis in faucibus.</p>
-									<p>Phasellus nisl nisl, varius id porttitor sed, pellentesque ac orci. Pellentesque
-									habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Morbi
-									bibendum justo sed mauris vehicula malesuada aliquam elit imperdiet. Aliquam eu nibh
-									lorem, eget gravida mi. Duis odio diam, luctus et vulputate vitae, vehicula ac dolor.
-									Pellentesque at urna eget tellus lobortis ultrices sed non erat. Donec eget erat non
-									magna volutpat malesuada quis eget eros. Nullam sodales cursus sapien, id consequat
-									leo suscipit ut. Praesent id turpis vitae turpis pretium ultricies. Vestibulum sit
-									amet risus elit.</p>
+									<p>The longest-standing mystery in exoplanets is the origin of short-period gas giants known
+									as hot Jupiters. Conventionally, it has been thought that these giants should form like the
+									solar system's Jupiter beyond the snow line \citep{Bodenheimer2000}, then move inward to their
+									current orbits either through interactions with their disk \citep{Goldreich_Tremaine1979,
+									Lin_Papa1986, Lin1996} or high-eccentricity tidal migration initiated by planet-planet scattering
+									\citep{Rasio_Ford1996, Chatterjee2008}, Lidov-Kozai cycling \citep{Wu_2003, Fabrycky2007,
+									Naoz2016_review}, or secular interactions \citep{Wu_2011, Petrovich2015}.
+									<p>The two distant migration paradigms can each explain only a subset of the known
+									observational properties of short-period gas giants (as reviewed by \citealt{Dawson2018}).
+									The most significant of these, challenging both disk and high-eccentricity migration,
+									is the observed isolation of hot Jupiters relative to warm Jupiters. Population studies
+									have demonstrated that hot Jupiters host nearby low-mass planetary companions much less
+									frequently than their longer period counterparts (e.g., \citealt{Steffen2012,
+									Huang_2016, Hord_2021}). The companion rates for these two populations should be similar
+									assuming either migration scenario, with quiescent disk migration favoring higher rates
+									than high-eccentricity migration.</p>
+
+
+
+									<p>These migration-based formation scenarios, however, are solely informed by the architecture
+									of our own solar system. Yet, the mass budget in the inner region of the minimum-mass solar
+									nebula (MMSN, \citealt{Hayashi1981}) is severely limited, making it difficult to form
+									sufficiently massive cores ($\sim 10 \text{ M}_{\oplus}$) for gas accretion
+									\citep{Pollack1996}. Observations from space-based transit \citep{Borucki2010, Batalha2013,
+									Ricker2015} and Doppler velocity \citep{Mayor2011, Howard2010, Vogt_2010} surveys, however,
+									have revealed a widespread prevalence of close-in ``super-Earths'', suggesting that the
+									inner regions of protoplanetary disks may be more massive than predicted from the MMSN
+									(\citealt{Chiang_Laughlin2013, Dai_2020}, though some may have migrated to their current
+									location via resonant chains, see \citealt{Izidoro_2017}). These compact planets often
+									exhibit a surprising ``peas in a pod'' structure \citep{Weiss2018,
+									Millholland_Wang_laughlin2017, Wang_2017, Goyal2022} where they share similar spacing,
+									masses, and radii, with typical masses from a few to a few tens of Earth masses and orbital
+									periods from a few days to months \citep{Latham2011, Lissauer2011, Lissauer2012, Fabrycky2014,
+									Winn_Fabryky2015}. </p>
 									<figure>
 									    <img src="images/PRfgiant_Pfgiant_K11_color_final.jpg" width="400" height="300" align="right" alt="test2" />
 									    <figcaption>Period ratio of giants with respect to their nearest companion.</figcaption>
