writing and wrapping test

--- a/research.html
+++ b/research.html
@@ -49,30 +49,22 @@
 										<p>2021-Present</p>
 									</header>
 									<div>
-									    <img src="images/HJ_irradiated.jpg" width="407" height="302" align="left" hspace="50" vspace="50" alt="NASA/Ames/JPL-Caltech" />
+									    <img src="images/HJ_irradiated.jpg" width="407" height="302" align="left" style="margin: 0px 10px 0px 0px;" alt="NASA/Ames/JPL-Caltech" />
 									    <p>Image Credit: NASA/Ames/JPL-Caltech</p>
 									</div>
-									<p>The longest-standing mystery in exoplanets is the origin of short-period gas giants known
-									as hot Jupiters. Conventionally, it has been thought that these giants should form like the
-									solar system's Jupiter beyond the snow line \citep{Bodenheimer2000}, then move inward to their
-									current orbits either through interactions with their disk \citep{Goldreich_Tremaine1979,
-									Lin_Papa1986, Lin1996} or high-eccentricity tidal migration initiated by planet-planet scattering
-									\citep{Rasio_Ford1996, Chatterjee2008}, Lidov-Kozai cycling \citep{Wu_2003, Fabrycky2007,
-									Naoz2016_review}, or secular interactions \citep{Wu_2011, Petrovich2015}.
-									<p>The two distant migration paradigms can each explain only a subset of the known
-									observational properties of short-period gas giants (as reviewed by \citealt{Dawson2018}).
-									The most significant of these, challenging both disk and high-eccentricity migration,
-									is the observed isolation of hot Jupiters relative to warm Jupiters. Population studies
-									have demonstrated that hot Jupiters host nearby low-mass planetary companions much less
-									frequently than their longer period counterparts (e.g., \citealt{Steffen2012,
-									Huang_2016, Hord_2021}). The companion rates for these two populations should be similar
-									assuming either migration scenario, with quiescent disk migration favoring higher rates
-									than high-eccentricity migration.</p>
+									<p>The longest-standing mystery in exoplanets is the origin of hot Jupiters. The conventional theory
+										is that these short-period gas giants first form in the outer regions of their respective systems
+										before migrating inward to their current orbits. While several variants of this inward migration
+										paradigm (e.g., disk migration, high-eccentricity migration) are successful in explaining the observed properties of hot Jupiters (and warm Jupiters),
+										none are fully consistent with the full suite of known characteristics.
+										Chief among these is the observed isolation of hot Jupiters relative to warm Jupiters,
+										wherein hot Jupiters host nearby low-mass planetary companion much less often
+										than their longer-period counterparts. The companion rates for these two populations should be similar
+										assuming either migration scenario, with quiescent disk migration favoring higher rates
+										than high-eccentricity migration.</p>
 
-
-
-									<p>These migration-based formation scenarios, however, are solely informed by the architecture
-									of our own solar system. Yet, the mass budget in the inner region of the minimum-mass solar
+									<p>Additionally, these migration-based formation scenarios are solely informed by the
+										architecture of our own solar system. Yet, the mass budget in the inner region of the minimum-mass solar
 									nebula (MMSN, \citealt{Hayashi1981}) is severely limited, making it difficult to form
 									sufficiently massive cores ($\sim 10 \text{ M}_{\oplus}$) for gas accretion
 									\citep{Pollack1996}. Observations from space-based transit \citep{Borucki2010, Batalha2013,
