--- a/research.html
+++ b/research.html
@@ -57,49 +57,47 @@
 										before migrating inward to their current orbits. While several variants of this inward migration
 										paradigm (e.g., disk migration, high-eccentricity migration) are successful in explaining the observed properties of hot Jupiters (and warm Jupiters),
 										none are fully consistent with the full suite of known characteristics.
-										Chief among these is the observed isolation of hot Jupiters relative to warm Jupiters,
+										Chief among these is the <em>observed isolation</em> of hot Jupiters relative to warm Jupiters,
 										wherein hot Jupiters host nearby low-mass planetary companion much less often
 										than their longer-period counterparts. The companion rates for these two populations should be similar
 										assuming either migration scenario, with quiescent disk migration favoring higher rates
 										than high-eccentricity migration.</p>
 
 									<p>Additionally, these migration-based formation scenarios are solely informed by the
-										architecture of our own solar system. Yet, the mass budget in the inner region of the minimum-mass solar
-									nebula (MMSN, \citealt{Hayashi1981}) is severely limited, making it difficult to form
-									sufficiently massive cores ($\sim 10 \text{ M}_{\oplus}$) for gas accretion
-									\citep{Pollack1996}. Observations from space-based transit \citep{Borucki2010, Batalha2013,
-									Ricker2015} and Doppler velocity \citep{Mayor2011, Howard2010, Vogt_2010} surveys, however,
-									have revealed a widespread prevalence of close-in ``super-Earths'', suggesting that the
-									inner regions of protoplanetary disks may be more massive than predicted from the MMSN
-									(\citealt{Chiang_Laughlin2013, Dai_2020}, though some may have migrated to their current
-									location via resonant chains, see \citealt{Izidoro_2017}). These compact planets often
-									exhibit a surprising ``peas in a pod'' structure \citep{Weiss2018,
-									Millholland_Wang_laughlin2017, Wang_2017, Goyal2022} where they share similar spacing,
-									masses, and radii, with typical masses from a few to a few tens of Earth masses and orbital
-									periods from a few days to months \citep{Latham2011, Lissauer2011, Lissauer2012, Fabrycky2014,
-									Winn_Fabryky2015}. </p>
-									<figure>
-									    <img src="images/PRfgiant_Pfgiant_K11_color_final.jpg" width="400" height="300" align="right" alt="test2" />
-									    <figcaption>Period ratio of giants with respect to their nearest companion.</figcaption>
-									</figure>
-									<p>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra
-									ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel. Praesent nec orci
-									eget quam rutrum bibendum. Proin pellentesque diam non ligula commodo tempor. Vivamus
-									eget urna nibh. Curabitur non fringilla nisl. Donec accumsan interdum nisi, quis
-									tincidunt felis sagittis eget. Donec elementum ligula dignissim sem pulvinar non semper
-									odio eleifend. Duis commodo fringilla commodo. Aliquam erat volutpat. Vestibulum
-									facilisis leo magna. Cras sit amet urna eros, id egestas urna. Quisque aliquam
-									tempus euismod. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
-									posuere cubilia.</p>
+										architecture of our own solar system, which we now know to be the exception rather
+										than the rule. Instead, thanks to space-based transit and Doppler velocity surveys,
+										we find there is a widespread prevalence of close-in "super-Earths"
+										, which suggests that the inner regions of protoplanetary disks are more massive than predicted
+										from our solar system. These compact planets often exhibit a surprising
+										"peas in a pod" structure (Weiss et al. 2018), where they share similar spacing,
+										masses, and radii, with typical masses from a few to a few tens of Earth masses and orbital
+									periods from a few days to months. </p>
+									<!-- <figure> -->
+									    <!--<img src="images/PRfgiant_Pfgiant_K11_color_final.jpg" width="400" height="300" align="right" alt="test2" /> -->
+									    <!--<figcaption>Period ratio of giants with respect to their nearest companion.</figcaption> -->
+									<!--</figure> -->
+									<div>
+									    <img src="images/PRfgiant_Pfgiant_K11_color_final.jpg" width="600" height="450" align="right" style="margin: 0px 0px 0px 10px;" alt="Period ratio vs. Period" />
+									    <p>Period ratio of giants with respect to their nearest companion as a function of period.</p>
+									</div>
+									<p>As was realized in \citet{STEVENSON1982} and \citet{Lee2014}, the gas accretion
+										efficiency does not sensitively depend on nebular conditions. Therefore, 
+										planets in compact peas-in-a-pod systems which are massive enough to trigger
+										run-away accretion may become gas giants in the inner region of the disk before
+										the surrounding gas dissipates \citep{Batygin2016, Boley_2016}. Since typical
+										\textit{Kepler} compact multi-planet systems are often packed close to the limit
+										of dynamical Hill stability \citep{Pu2015, Volk_2015}, the formation of a
+										Jovian-class planet in situ should naturally lead to instability and subsequent
+										dynamical sculpting following the disappearance of the protoplanetary disk. </p>
 									
-									<p>Phasellus nisl nisl, varius id porttitor sed, pellentesque ac orci. Pellentesque
-									habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Morbi
-									bibendum justo sed mauris vehicula malesuada aliquam elit imperdiet. Aliquam eu nibh
-									lorem, eget gravida mi. Duis odio diam, luctus et vulputate vitae, vehicula ac dolor.
-									Pellentesque at urna eget tellus lobortis ultrices sed non erat. Donec eget erat non
-									magna volutpat malesuada quis eget eros. Nullam sodales cursus sapien, id consequat
-									leo suscipit ut. Praesent id turpis vitae turpis pretium ultricies. Vestibulum sit
-									amet risus elit.</p>
+									<p>In this work, we aim to investigate the post-disk dynamical interactions assuming
+										in situ formation of short-period gas giants took place in primordial compact,
+										high-multiplicity, peas-in-a-pod systems. That is, rather than scrutinize the
+										physical processes underlying in situ formation, we explore its associated
+										dynamical consequences on system architectures using $N$-body simulations.
+										We demonstrate that in situ formation may naturally produce a high frequency
+										of \textit{observationally} isolated hot Jupiters and warm Jupiters which hold
+										onto their nearby low-mass companions.</p>
 								</article>
 								<article class="box post">
 									<header class="style1">
