in situ section

--- a/research.html
+++ b/research.html
@@ -71,33 +71,28 @@
 										from our solar system. These compact planets often exhibit a surprising
 										"peas in a pod" structure (Weiss et al. 2018), where they share similar spacing,
 										masses, and radii, with typical masses from a few to a few tens of Earth masses and orbital
-									periods from a few days to months. </p>
+										periods from a few days to months. If massive enough, these planets may trigger
+										run-away accretion <em>in situ</em> to become gas giants in the inner region of the disk before
+										the surrounding gas dissipates. Assuming the progenitor systems are more compact
+										than observed <em>Kepler</em> multis, an in situ-formed giant should naturally trigger instability
+										and subsequent dynamical sculpting once the disk has vanished.</p>
 									<!-- <figure> -->
 									    <!--<img src="images/PRfgiant_Pfgiant_K11_color_final.jpg" width="400" height="300" align="right" alt="test2" /> -->
 									    <!--<figcaption>Period ratio of giants with respect to their nearest companion.</figcaption> -->
 									<!--</figure> -->
 									<div>
-									    <img src="images/PRfgiant_Pfgiant_K11_color_final.jpg" width="600" height="450" align="right" style="margin: 0px 0px 0px 10px;" alt="Period ratio vs. Period" />
-									    <p>Period ratio of giants with respect to their nearest companion as a function of period.</p>
+									    <img src="images/PRfgiant_Pfgiant_K11_color_final.jpg" width="550" height="450" align="right" style="margin: 0px 0px 0px 10px;" alt="Period ratio vs. Period" />
+									    <!--<p>Period ratio of giants with respect to their nearest companion as a function of period.</p>-->
 									</div>
-									<p>As was realized in \citet{STEVENSON1982} and \citet{Lee2014}, the gas accretion
-										efficiency does not sensitively depend on nebular conditions. Therefore, 
-										planets in compact peas-in-a-pod systems which are massive enough to trigger
-										run-away accretion may become gas giants in the inner region of the disk before
-										the surrounding gas dissipates \citep{Batygin2016, Boley_2016}. Since typical
-										\textit{Kepler} compact multi-planet systems are often packed close to the limit
-										of dynamical Hill stability \citep{Pu2015, Volk_2015}, the formation of a
-										Jovian-class planet in situ should naturally lead to instability and subsequent
-										dynamical sculpting following the disappearance of the protoplanetary disk. </p>
-									
-									<p>In this work, we aim to investigate the post-disk dynamical interactions assuming
-										in situ formation of short-period gas giants took place in primordial compact,
-										high-multiplicity, peas-in-a-pod systems. That is, rather than scrutinize the
-										physical processes underlying in situ formation, we explore its associated
-										dynamical consequences on system architectures using $N$-body simulations.
-										We demonstrate that in situ formation may naturally produce a high frequency
-										of \textit{observationally} isolated hot Jupiters and warm Jupiters which hold
-										onto their nearby low-mass companions.</p>
+									<p> </p>
+									<p>To this end, I am currently leading a project with collaborators Songhu Wang,
+										Bonan Pu, Malena Rice, and Dong-Hong Wu that tests the viability of
+										this scenario using N-body simulations. We study and describe
+										the dynamical consequences on compact multi-planet host systems which
+										contain an in situ-formed short-period gas giant. We find that in situ formation
+										naturally reproduces several known properties of hot and warm Jupiters, including
+										the companionship dichotomy. Our paper (Radzom et al. 2022 b) will soon be
+										submitted to the ApJ.</p>
 								</article>
 								<article class="box post">
 									<header class="style1">
