--- a/research.html
+++ b/research.html
@@ -84,14 +84,20 @@
 									    <img src="images/PRfgiant_Pfgiant_K11_color_final.jpg" width="550" height="450" align="right" style="margin: 0px 0px 0px 10px;" alt="Period ratio vs. Period" />
 									    <!--<p>Period ratio of giants with respect to their nearest companion as a function of period.</p>-->
 									</div>
-									<p> </p>
+									
 									<p>To this end, I am currently leading a project with collaborators Songhu Wang,
 										Bonan Pu, Malena Rice, and Dong-Hong Wu that tests the viability of
 										this scenario using N-body simulations. We study and describe
 										the dynamical consequences on compact multi-planet host systems which
 										contain an in situ-formed short-period gas giant. We find that in situ formation
 										naturally reproduces several known properties of hot and warm Jupiters, including
-										the companionship dichotomy. Our paper (Radzom et al. 2022 b) will soon be
+										the companionship dichotomy. This is illustrated in the figure on the right, 
+										which shows the period ratios of our simulated Jupiters with their nearest low-mass
+										companion after 10 Myr of evolution: the shortest-period giants are typically
+										much more isolated than others. We posit that a large fraction of these companions
+										to hot Jupiters are too distant and/or exhibit too high of mutual inclinations to be 
+										detected efficiently, causing hot Jupiters to appear more lonely than they truly are.
+										Our paper (Radzom et al. 2022 b) will soon be
 										submitted to the ApJ.</p>
 								</article>
 								<article class="box post">
@@ -99,21 +105,13 @@
 										<h2>Parameterization of Stability in Hierarchical Multi-planet Systems</h2>
 										<p>2021-Present</p>
 									</header>
-									<a href="#" class="image featured">
-										<img src="images/pic01.jpg" alt="" />
-									</a>
-									<p>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget.
-									odio eleifend. Duis commodo fringilla commodo. Aliquam erat volutpat. Vestibulum
-									facilisis leo magna. Cras sit amet urna eros, id egestas urna. Quisque aliquam
-									tempus euismod. Vestibulum ante ipsum primis in faucibus.</p>
-									<p>Phasellus nisl nisl, varius id porttitor sed, pellentesque ac orci. Pellentesque
-									habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Morbi
-									bibendum justo sed mauris vehicula malesuada aliquam elit imperdiet. Aliquam eu nibh
-									lorem, eget gravida mi. Duis odio diam, luctus et vulputate vitae, vehicula ac dolor.
-									Pellentesque at urna eget tellus lobortis ultrices sed non erat. Donec eget erat non
-									magna volutpat malesuada quis eget eros. Nullam sodales cursus sapien, id consequat
-									leo suscipit ut. Praesent id turpis vitae turpis pretium ultricies. Vestibulum sit
-									amet risus elit.</p>
+									<div>
+									    <img src="images/orbitsnap_stability.jpg" width="400" height="400" align="left" style="margin: 0px 10px 0px 0px;" alt="" />
+									</div>
+									<p>Most <em>Kepler</em>-like systems contain more than two planets, with the average
+										instrinsic multiplicity predicted to be nearly 6 planets per star (Zink, Christiansen & Hansen 2019)
+										. Yet, except for select cases, there remains to be no analytical understanding
+									of dynamical instability in high-multiplicity (N>3) systems.</p>
 									<p>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra
 									ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel. Praesent nec orci
 									eget quam rutrum bibendum. Proin pellentesque diam non ligula commodo tempor. Vivamus
