--- a/research.html
+++ b/research.html
@@ -117,11 +117,24 @@
 										While there is little analytical understanding of dynamical instability
 										in generalized high-multiplicity (N>3) systems, a number of semi-analytic
 										and empirical studies exist which focus on the relationship between the spacing
-										and stability of such systems. These studies are largely comprised of N-body
+										and stability of uniform systems. These studies are largely comprised of N-body
 									simulations of idealized Equal Mutual Separation (EMS) systems, for which the 
-									instability timescale is well-parameterized by the spacing parameter K. Wu example here,
-									then further, this study is limited to planets of roughly the same mass.</p>
-									<p>I am working to parameterize instability in hierarchical multis.</p>
+									instability timescale is well-parameterized by the spacing parameter K. Broadly, it is seen
+										that systems with smaller K values (i.e., smaller period ratios) are more likely
+										to undergo instability (and on shorter timescales), which is consistent with the 
+										paucity of <em>Kepler</em> planets with period ratios less than 3:2. Wu et al. 2019
+										expanded these studies by running N-body simulations of non-EMS peas-in-a-pod systems, 
+										finding that the lower limit of the instability timescale is determined by the minimal
+										value of the spacing parameter within the system.</p>
+									<p>For in situ-formed short-period giants, a phase of post-disk dynamical instability
+										may be key to sculpt the architectures we see today. In order to build a deeper 
+										understanding of this picture and link progenitor systems to what is currently
+										observed, it will be important to characterize the primary 
+										drivers of instability in multi-planet systems containing a hot or warm Jupiter.
+										Thus, I am using N-body simulations of high-multiplicity, compact, non-EMS progenitor
+										systems containing a close-in Jovian-class planet to parameterize instability in hierarchical multis.
+									Preliminary results suggest that the harmonic mean of the K values within these types of systems is
+									the best indicator of the instability timescale.</p>
 									
 								</article>
 							</div>
