--- a/research.html
+++ b/research.html
@@ -49,7 +49,7 @@
 										<p>2021-Present</p>
 									</header>
 									<div>
-									    <img src="images/HJ_irradiated.jpg" width="407" height="302" align="left" style="margin: 0px 10px 0px 0px;" alt="NASA/Ames/JPL-Caltech" />
+									    <img src="images/HJ_irradiated.jpg" width="468" height="347" align="left" style="margin: 10px 10px 0px 0px;" alt="NASA/Ames/JPL-Caltech" />
 									    <p>Image Credit: NASA/Ames/JPL-Caltech</p>
 									</div>
 									<p>The longest-standing mystery in exoplanets is the origin of hot Jupiters. The conventional theory
@@ -203,9 +203,12 @@
 										<h2>Polarization Alignment in Birefringent Optical Fibers</h2>
 										<p>2018-2020</p>
 									</header>
-									<a href="#" class="image featured">
-										<img src="images/PRfgiant_Pfgiant_K11_color_final.jpg" ALIGN="left" HSPACE="50" VSPACE="50" width="400" height="300" alt="test" />
-									</a>
+									<div>
+									    <img src="images/polarimeter_front.jpg" width="400" height="300" align="left" style="margin: 0px 10px 0px 0px;" alt="" />
+									</div>
+									<div>
+									    <img src="images/polarimeter_interior.jpg" width="300" height="400" align="left" style="margin: 0px 10px 0px 0px;" alt="" />
+									</div>
 									<p>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget.
 									odio eleifend. Duis commodo fringilla commodo. Aliquam erat volutpat. Vestibulum
 									facilisis leo magna. Cras sit amet urna eros, id egestas urna. Quisque aliquam
@@ -227,6 +230,9 @@
 									facilisis leo magna. Cras sit amet urna eros, id egestas urna. Quisque aliquam
 									tempus euismod. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
 									posuere cubilia.</p>
+									<div>
+									    <img src="images/combinedOZ_var_drift.png.jpg" width="400" height="500" align="left" style="margin: 0px 10px 0px 0px;" alt="" />
+									</div>
 									<p>Phasellus nisl nisl, varius id porttitor sed, pellentesque ac orci. Pellentesque
 									habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Morbi
 									bibendum justo sed mauris vehicula malesuada aliquam elit imperdiet. Aliquam eu nibh
